added new post and modified some formatting

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Jimena Gonzalez-Cotera 
-
+title: Jimena Gonzalez-CoteraA
 #email: jimenagoncot at gmail dot com
 description: >- # this means to ignore newlines until "baseurl:"
   Some projects of mine!
@@ -27,7 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: jimenacotera
 linkedin_username : jimenagoco
-
+author: ""
 # Build settings
 theme: minima
 #theme: just-the-docs
